Fixed svg z-indexing

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,10 +22,11 @@ body {
 }
 
 #gooey-bg {
+  z-index: 200;
   position: fixed;
   top: 0; right: 0; bottom: 0; left: 0;
+  // border: 1px solid black;
   path {
-    z-index: 200;
     &.color-path {
       fill: $color-primary;
     }
@@ -123,7 +124,7 @@ body {
 #page {
   z-index: 100;
   position: absolute;
-  top: 150%; right: 0; bottom: 0; left: 0;
+  top: 75%; right: 0; bottom: 0; left: 0;
   
   h1 {
     text-align: center;
